--- a/app.json
+++ b/app.json
@@ -1,9 +1,20 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs",
-    "pages/demo/demo",
-    "pages/demos/demos"
+    "pages/category/index",
+    "pages/goods_list/index",
+    "pages/goods_detail/index",
+    "pages/cart/index",
+    "pages/collect/index",
+    "pages/order/index",
+    "pages/search/index",
+    "pages/user/index",
+    "pages/feedback/index",
+    "pages/login/index",
+    "pages/auth/index",
+    "pages/pay/index",
+    "components/mySwiper/mySwiper"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -22,19 +33,19 @@
       "selectedIconPath": "assets/icons/home-o.png"
 
     },{
-      "pagePath": "pages/logs/logs",
+      "pagePath": "pages/category/index",
       "text": "分类",
       "iconPath": "assets/icons/category.png",
       "selectedIconPath": "assets/icons/category-o.png"
     },
     {
-      "pagePath": "pages/demo/demo",
+      "pagePath": "pages/cart/index",
       "text": "购物车",
       "iconPath": "assets/icons/cart.png",
       "selectedIconPath": "assets/icons/cart-o.png"
     },
     {
-      "pagePath": "pages/demos/demos",
+      "pagePath": "pages/user/index",
       "text": "我的",
       "iconPath": "assets/icons/my.png",
       "selectedIconPath": "assets/icons/my-o.png"
