项目组件添加，分类页面开始

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
-    "pages/index/index",
     "pages/category/index",
+    "pages/index/index",
     "pages/goods_list/index",
     "pages/goods_detail/index",
     "pages/cart/index",
@@ -12,8 +12,7 @@
     "pages/feedback/index",
     "pages/login/index",
     "pages/auth/index",
-    "pages/pay/index",
-    "components/mySwiper/mySwiper"
+    "pages/pay/index"
     
   ],
   "window": {
